Refactor saved queries into views
