# apps/api/openapi.json
@@ -1476,7 +1476,10 @@
 							}
 						]
 					},
-					"createdAt": {},
+					"createdAt": {
+						"format": "date-time",
+						"type": "string"
+					},
 					"description": {
 						"anyOf": [
 							{
@@ -1494,9 +1497,11 @@
 									"type": "boolean"
 								},
 								"field": {
+									"minLength": 1,
 									"type": "string"
 								},
 								"value": {
+									"minLength": 1,
 									"type": "string"
 								}
 							},
@@ -1528,7 +1533,10 @@
 						],
 						"type": "string"
 					},
-					"updatedAt": {}
+					"updatedAt": {
+						"format": "date-time",
+						"type": "string"
+					}
 				},
 				"required": [
 					"id",
@@ -12725,6 +12733,7 @@
 													"type": "string"
 												},
 												"value": {
+													"minLength": 1,
 													"type": "string"
 												}
 											},
@@ -12916,6 +12925,7 @@
 													"type": "string"
 												},
 												"value": {
+													"minLength": 1,
 													"type": "string"
 												}
 											},
